Working Google groups embed

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,6 +34,7 @@
               <li> <a  data-toggle="modal" href="#contactModal" >Contact</a></li>
               <li><a href="http://www.meetup.com/london-scala">Meetup</a></li>
               <li><a href="#gitbub">Github</a></li>
+              <li><a href="/group">Google Group</a></li>
               <li><a href="/jobs">Jobs</a></li>
               
             </ul>
