--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,10 +5,14 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+
+
+        <link rel="stylesheet/less" href="@routes.Assets.at("less/bootstrap.less")">
+
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <script src='@routes.Assets.at("javascripts/less-1.3.1.min.js")' type="text/javascript"></script>
     </head>
     <body>
 
