--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -33,7 +33,7 @@
               <li> <a  data-toggle="modal" href="#aboutModal" >About</a></li>
               <li> <a  data-toggle="modal" href="#contactModal" >Contact</a></li>
               <li><a href="http://www.meetup.com/london-scala">Meetup</a></li>
-              <li><a href="#gitbub">Github</a></li>
+              <li><a href="https://github.com/lsug-dojo">Github</a></li>
               <li><a href="/group">Google Group</a></li>
               <li><a href="/jobs">Jobs</a></li>
               
