--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,10 +9,9 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
 
-        <link rel="stylesheet/less" href="@routes.Assets.at("less/bootstrap.less")">
+        <link rel="stylesheet" href='@routes.Assets.at("stylesheets/main.css")'>
 
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-        <script src='@routes.Assets.at("javascripts/less-1.3.1.min.js")' type="text/javascript"></script>
     </head>
     <body>
 
