--- a/app/assets/stylesheets/bootstrap.less
+++ b/app/assets/stylesheets/bootstrap.less
@@ -58,5 +58,8 @@
 @import "carousel.less";
 @import "hero-unit.less";
 
+@import "bootswatch.less";
+
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
+
