Adds some dynamic widgets to the homepage

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,11 +17,19 @@
       </div>
     </div>
     <div class="span10">
+      <div class="span5">
+        <a class="twitter-timeline"  href="https://twitter.com/search?q=%23lsug" data-widget-id="262169148635873281">Tweets about "#lsug"</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+      </div>
+      <div class="span5">
+        <span id="lsug-github-widget"></span>
+      </div>  
 	  </div>
     </div>
   </div>
-</div>
 
+</div>
 
 
 }
