--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,6 +7,7 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/github.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
@@ -50,6 +51,7 @@
 
   
     <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.github.min.js")"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap-transition.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap-alert.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap-modal.js")" type="text/javascript"></script>
@@ -62,6 +64,12 @@
     <script src="@routes.Assets.at("javascripts/bootstrap-collapse.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap-carousel.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap-typeahead.js")" type="text/javascript"></script>
-
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $("#lsug-github-widget").github({
+          user: "lsug-dojo"
+        });
+      });
+    </script>
     </body>
 </html>
