Switches to fixed container

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,26 +1,21 @@
 @(message: String, fullName: String)
 
 @main("Welcome to London Scala User Group", fullName ) {
- 
 
-
-
-<div class="container-fluid">
-  <div class="row-fluid">
+  <div class="row">
     <div class="span2">
       <!--Sidebar content-->
       <div class="well">
-      <span class="label label-success">Something</span>
+        <span class="label label-success">Something</span>
       </div>
       <div class="well">
-      <span class="label label-success">Something</span>
+        <span class="label label-success">Something</span>
       </div>
     </div>
     <div class="span10">
-	  </div>
     </div>
   </div>
-</div>
+
 
 
 
