--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,68 +3,54 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>@title</title>
+<head>
+    <title>@title</title>
 
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-
-
-        <link rel="stylesheet" href='@routes.Assets.at("stylesheets/main.css")'>
-
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-    </head>
-    <body>
+    <link rel="shortcut icon" type="image/png" href='@routes.Assets.at("images/favicon.png")'>
 
 
-    @aboutbox() 
+    <link rel="stylesheet" href='@routes.Assets.at("stylesheets/main.css")'>
+
+    <script src='@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript'></script>
+    <script src='@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript'></script>
+</head>
+<body>
 
 
+@aboutbox()
 
-	<div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">LSUG</a>
 
-          <div class="nav-collapse">
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="/">LSUG</a>
 
-            <ul class="nav">
-              <li> <a  data-toggle="modal" href="#aboutModal" >About</a></li>
-              <li> <a  data-toggle="modal" href="#contactModal" >Contact</a></li>
-              <li><a href="http://www.meetup.com/london-scala">Meetup</a></li>
-              <li><a href="https://github.com/lsug-dojo">Github</a></li>
-              <li><a href="/group">Google Group</a></li>
-              <li><a href="/jobs">Jobs</a></li>
-              
-            </ul>
-          </div><!--/.nav-collapse -->
+            <div class="nav-collapse">
+
+                <ul class="nav">
+                    <li><a data-toggle="modal" href="#aboutModal">About</a></li>
+                    <li><a data-toggle="modal" href="#contactModal">Contact</a></li>
+                    <li><a href="http://www.meetup.com/london-scala">Meetup</a></li>
+                    <li><a href="https://github.com/lsug-dojo">Github</a></li>
+                    <li><a href="/group">Google Group</a></li>
+                    <li><a href="/jobs">Jobs</a></li>
+
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-      </div>
-  
+    </div>
+</div>
 
 
+<div class="container">
+    @content
+</div>
 
-      @content
-  </div>
-
-  
-    <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-transition.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-alert.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-modal.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-scrollspy.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-tab.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-tooltip.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-popover.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-button.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-collapse.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-carousel.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-typeahead.js")" type="text/javascript"></script>
-
-    </body>
+</body>
 </html>
