--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,8 +11,7 @@
 
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/main.css")'>
 
-    <script src='@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript'></script>
-    <script src='@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript'></script>
+    <script src='@routes.Assets.at("javascripts/jquery-1.7.1.min.js")' type="text/javascript"></script>
 </head>
 <body>
 
@@ -51,6 +50,9 @@
 <div class="container">
     @content
 </div>
+
+<script src='@routes.Assets.at("javascripts/bootstrap.min.js")' type="text/javascript"></script>
+
 
 </body>
 </html>
