fixes the iframe to uses the fixed container as well

--- a/app/views/iframewrapper.scala.html
+++ b/app/views/iframewrapper.scala.html
@@ -2,13 +2,12 @@
 
 @main("London Scala User Google Group", fullName ) {
 
-  <div class="container-fluid">
-    <div class="row-fluid">
-      <iframe id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="900" height="700"> 
+    <div class="row">
+      <iframe class="span9" id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="900" height="700">
       </iframe>
       <script type="text/javascript">
-      document.getElementById("forum_embed").src ="https://groups.google.com/forum/embed/?place=forum/scala-london#!forum/@groupname"
-  </script>
+        document.getElementById("forum_embed").src ="https://groups.google.com/forum/embed/?place=forum/scala-london#!forum/@groupname"
+      </script>
     </div>
-  </div>
+
 }
