Collapse past meetings

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -62,6 +62,10 @@
     </div>
 </div>
 
+<footer>
+    (c)LSUG 2012
+</footer>
+
 <script type="text/javascript">
     $(document).ready(function(){
         $("#lsug-github-widget").github({
