--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,21 +8,21 @@
 
     <h2>Next Meeting</h2>
     <div class="row">
+
         <div class="span9 meeting current">
             <h3>@current.name</h3>
-            <p>@current.description</p>
+            <p>@Html(current.description)</p>
         </div>
     </div>
 
     <h2>Upcoming Meetings</h2>
     <div class="row">
-    @Application.upcomingMeetings.map { meetings =>
-        @meetings.map { meeting =>
-            <div class="span9 meeting">
+    @Application.upcomingMeetings.map { meeting =>
+        <div class="span9 meeting current">
                 <h3> @meeting.name </h3>
-                <p>@meeting.description</p>
+                <p> @Html(meeting.description) </p>
             </div>
-        }
+        </div>
     }
 
     </div>
