--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(current: Meeting, fullName: String = "Scala User")
+@(fullName: String = "Scala User")
 
 @import models._
 @import scala.concurrent.ExecutionContext.Implicits.global
@@ -6,18 +6,8 @@
 
 @main("Welcome to London Scala User Group", fullName) {
 
-    <h2>Next Meeting</h2>
-    
-    <div class="row">
-
-        <div class="span9 meeting current">
-            <h3>@current.name</h3>
-            <a href="http://www.meetup.com/london-scala/events/@current.event_id/" data-event="@current.event_id" class="mu-rsvp-btn">RSVP</a>
-            <p>@Html(current.description)</p>
-        </div>
-    </div>
-
     <h2>Upcoming Meetings</h2>
+
     <div class="row">
     @Application.upcomingMeetings.map { meeting =>
         <div class="span9 meeting current">
@@ -28,7 +18,6 @@
             </div>
         </div>
     }
-
     </div>
 
     <h2>Past Meetings</h2>
@@ -38,7 +27,7 @@
         <div class="accordion-group">
             <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href=' @( "#collapseOne" + pm._2 )'>
-                @Application.monthName( pm._1.time.getMonth )  @( 1900 + pm._1.time.getYear) -  @pm._1.name
+                @Application.formatDate( pm._1.time ) -  @pm._1.name
             </a>
             </div>
             <div id='@("collapseOne" + pm._2 )' class="accordion-body collapse">
@@ -50,8 +39,6 @@
         </div>
     }
     </div>
-
-
 
 <script>
 !function(d,s,id){
