--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,9 +11,10 @@
     <div class="row">
     @Application.upcomingMeetings.map { meeting =>
         <div class="span9 meeting current">
-                <h3> @meeting.name</h3>
-                <a href="http://www.meetup.com/london-scala/events/@meeting.event_id/"
-                        data-event="@meeting.event_id" class="mu-rsvp-btn">RSVP</a>
+                <h3>@meeting.name</h3>
+                <h4>@Application.formatEventTime(meeting.time)
+                <a style="margin-left: 10px" href="http://www.meetup.com/london-scala/events/@meeting.event_id/"
+                        data-event="@meeting.event_id" class="mu-rsvp-btn">RSVP</a></h4>
                 <p> @Html(meeting.description) </p>
             </div>
         </div>
